# eipbot

./: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  eipbot.yml
slack/: Dockerfile  bot.py
src/: main.rs
