[package]
name = "eipbot"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.54.1"
aws-sdk-ec2 = "0.24.0"
tokio = { version = "1", features = ["full"] }
tokio-executor = "0.2.0-alpha.6"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde_json = "1.0.94"
paris = { version = "1.5", features = ["timestamps", "macros"] }
slack-hook = "0.8.0"
clokwerk = "0.4.0"
trust-dns-resolver = "0.22.0"
regex = "1.5.4"